fix: description overflowing table cell (#4656)

--- a/webui/react/src/shared/styles/antd.scss
+++ b/webui/react/src/shared/styles/antd.scss
@@ -217,8 +217,11 @@ html {
     opacity: 1;
     user-select: auto;
   }
-  .ant-table .ant-table-tbody > tr > td[class*=ant-table-cell-fix-] {
+  .ant-table .ant-table-tbody > tr > td.ant-table-cell {
     background-color: var(--theme-stage-weak);
+  }
+  .ant-table .ant-table-tbody > tr > td.ant-table-cell.ant-table-column-sort {
+    filter: invert(2%);
   }
   .ant-table .ant-table-tbody > tr.ant-table-row-selected > td {
     background-color: var(--theme-stage);
